force-app/main/default/objects/Position__c/fields/Active_position__c.field-meta.xml
<CustomField>
    <fullName>Active_position__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Active position?</label>
    <type>Checkbox</type>
</CustomField>