force-app/main/default/objects/Position__c/fields/Hired_By__c.field-meta.xml
<CustomField>
    <fullName>Hired_By__c</fullName>
    <defaultValue>TODAY() + 30</defaultValue>
    <label>Hired By</label>
    <type>Date</type>
</CustomField>