force-app/main/default/objects/Position__c/fields/Internal_English_Test__c.field-meta.xml
<CustomField>
    <fullName>Internal_English_Test__c</fullName>
    <label>Internal English Test</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Unsent</fullName>
                <default>true</default>
                <label>Unsent</label>
            </value>
            <value>
                <fullName>Sent</fullName>
            </value>
            <value>
                <fullName>Received</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>