force-app/main/default/objects/Position__c/fields/Position_External_ID__c.field-meta.xml
<CustomField>
    <fullName>Position_External_ID__c</fullName>
    <externalId>true</externalId>
    <label>Position External ID</label>
    <length>4</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>