force-app/main/default/objects/Position__c/fields/Position_Life_Cycle__c.field-meta.xml
<CustomField>
    <fullName>Position_Life_Cycle__c</fullName>
    <label>Position&apos;s Life Cycle</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Trainee</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>