force-app/main/default/objects/Position__c/recordTypes/Operations_Position.recordType-meta.xml
<RecordType>
    <fullName>Operations_Position</fullName>
    <active>true</active>
    <description>For all Operation positions</description>
    <label>Operations Position</label>
</RecordType>