force-app/main/default/objects/Position__c/recordTypes/Staff_Position.recordType-meta.xml
<RecordType>
    <fullName>Staff_Position</fullName>
    <active>true</active>
    <description>For all non Operations positions</description>
    <label>Staff Position</label>
</RecordType>