force-app/main/default/objects/Position__c/listViews/Email_Alerts_for_New_Positions_Position.listView-meta.xml
<ListView>
    <fullName>Email_Alerts_for_New_Positions_Position</fullName>
    <filterScope>Queue</filterScope>
    <label>Email Alerts for New Positions</label>
    <queue>Email_Alerts_for_New_Positions</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>