force-app/main/default/objects/Position__c/listViews/New_Positions_Position.listView-meta.xml
<ListView>
    <fullName>New_Positions_Position</fullName>
    <filterScope>Queue</filterScope>
    <label>HR Positions Queue</label>
    <queue>HR_Positions_Queue</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>